e1000e: Workaround for dropped packets in Gig/100 speeds on 82579 (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15184,6 +15184,7 @@
 	patches.drivers/e1000e-0141-e1000e-Cleanup-to-fix-checkpatch-missing-blank-lines.patch
 	patches.drivers/e1000e-0142-e1000e-Cleanup-checkpatch-extra-space.patch
 	patches.drivers/e1000e-0143-e1000e-Cleanup-use-of-deprecated-DEFINE_PCI_DEVICE_T.patch
+	patches.drivers/e1000e-0144-e1000e-Workaround-for-dropped-packets-in-Gig-100-spe.patch
 
 	########################################################
 	# Wireless Networking
