e1000e: PTP lock in e1000e_phc_adjustfreq (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15157,6 +15157,7 @@
 	patches.drivers/e1000e-0114-e1000e-Fix-a-compile-flag-mis-match-for-suspend-resu.patch
 	patches.drivers/e1000e-0115-e1000e-Fix-compilation-warning-when-CONFIG_PM_SLEEP.patch
 	patches.drivers/e1000e-0116-e1000e-Use-pci_enable_msix_range-instead-of-pci_enab.patch
+	patches.drivers/e1000e-0117-e1000e-PTP-lock-in-e1000e_phc_adjustfreq.patch
 
 	########################################################
 	# Wireless Networking
