--- a/series.conf
+++ b/series.conf
@@ -15108,6 +15108,7 @@
 	patches.drivers/e1000e-0065-e1000e-cleanup-LONG_LINE-checkpatch-warnings.patch
 	patches.drivers/e1000e-0066-e1000e-cleanup-LEADING_SPACE-checkpatch-warnings.patch
 	patches.drivers/e1000e-0067-e1000e-cleanup-PARENTHESIS_ALIGNMENT-checkpatch-chec.patch
+	patches.drivers/e1000e-0068-e1000e-cleanup-SPACING-checkpatch-checks.patch
 
 	########################################################
 	# Wireless Networking
