net: use SPEED_UNKNOWN and DUPLEX_UNKNOWN when appropriate (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15193,6 +15193,7 @@
 	patches.drivers/e1000e-0150-e1000e-Cleanup-parenthesis-around-return-value.patch
 	patches.drivers/e1000e-0151-e1000e-Fix-expand-setting-EEE-link-info-to-all-affec.patch
 	patches.drivers/e1000e-0152-e1000e-Out-of-line-__ew32_prepare-__ew32.patch
+	patches.drivers/e1000e-0153-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
 
 	########################################################
 	# Wireless Networking
