--- a/series.conf
+++ b/series.conf
@@ -15105,6 +15105,7 @@
 	patches.drivers/e1000e-0062-e1000e-fix-accessing-to-suspended-device.patch
 	patches.drivers/e1000e-0063-e1000e-cleanup-CODE_INDENT-checkpatch-errors.patch
 	patches.drivers/e1000e-0064-e1000e-cleanup-SPACING-checkpatch-errors-and-warning.patch
+	patches.drivers/e1000e-0065-e1000e-cleanup-LONG_LINE-checkpatch-warnings.patch
 
 	########################################################
 	# Wireless Networking
