--- a/series.conf
+++ b/series.conf
@@ -15081,6 +15081,7 @@
 	patches.drivers/e1000e-0038-e1000e-cleanup-remove-e1000e_commit_phy.patch
 	patches.drivers/e1000e-0039-e1000e-correct-maximum-frame-size-on-82579.patch
 	patches.drivers/e1000e-0040-e1000e-adjust-PM-QoS-request.patch
+	patches.drivers/e1000e-0041-e1000e-cleanup-remove-unused-define.patch
 
 	########################################################
 	# Wireless Networking
