e1000e: low throughput using 4K jumbos on I218 (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15135,6 +15135,7 @@
 	patches.drivers/e1000e-0092-e1000e-Use-marco-instead-of-digit-for-defining-e1000.patch
 	patches.drivers/e1000e-0093-e1000e-disable-ASPM-L1-on-82583.patch
 	patches.drivers/e1000e-0094-e1000e-iAMT-connections-drop-on-driver-unload-when-j.patch
+	patches.drivers/e1000e-0095-e1000e-low-throughput-using-4K-jumbos-on-I218.patch
 
 	########################################################
 	# Wireless Networking
