e1000e: Cleanup to fix checkpatch missing blank lines (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15181,6 +15181,7 @@
 	patches.drivers/e1000e-0138-e1000e-Enclose-e1000e_pm_thaw-with-CONFIG_PM_SLEEP.patch
 	patches.drivers/e1000e-0139-e1000e-igb-ixgbe-i40e-fix-message-terminations.patch
 	patches.drivers/e1000e-0140-e1000e-Cleanup-return-values-in-ethtool.patch
+	patches.drivers/e1000e-0141-e1000e-Cleanup-to-fix-checkpatch-missing-blank-lines.patch
 
 	########################################################
 	# Wireless Networking
