e1000e: use generic IEEE MII definitions (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15089,6 +15089,7 @@
 	patches.drivers/e1000e-0046-e1000e-cleanup-some-whitespace-and-indentation-issue.patch
 	patches.drivers/e1000e-0047-e1000e-update-driver-version-string.patch
 	patches.drivers/e1000e-0048-e1000e-resolve-Wunused-parameter-compile-warnings.patch
+	patches.drivers/e1000e-0049-e1000e-use-generic-IEEE-MII-definitions.patch
 
 	########################################################
 	# Wireless Networking
