e1000e: Fix no connectivity when driver loaded with cable out (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15175,6 +15175,7 @@
 	patches.drivers/e1000e-0132-e1000e-Fix-Explicitly-set-Transmit-Control-Register.patch
 	patches.drivers/e1000e-0133-e1000e-add-timeout-for-TX-HW-time-stamping-work.patch
 	patches.drivers/e1000e-0134-e1000e-remove-redundant-if-clause-from-PTP-work.patch
+	patches.drivers/e1000e-0135-e1000e-Fix-no-connectivity-when-driver-loaded-with-c.patch
 
 	########################################################
 	# Wireless Networking
