e1000e: Add support for EEE in Sx states (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15197,6 +15197,7 @@
 	patches.drivers/e1000e-0154-e1000e-remove-unnecessary-break-after-return.patch
 	patches.drivers/e1000e-0155-e1000e-Fix-CRC-errors-with-jumbo-traffic.patch
 	patches.drivers/e1000e-0156-e1000e-Add-code-to-check-return-values-on-NVM-access.patch
+	patches.drivers/e1000e-0157-e1000e-Add-support-for-EEE-in-Sx-states.patch
 
 	########################################################
 	# Wireless Networking
