e1000e: resolve checkpatch PREFER_PR_LEVEL warning (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15050,6 +15050,7 @@
 	patches.drivers/e1000e-0007-e1000e-fix-enabling-of-EEE-on-82579-and-I217.patch
 	patches.drivers/e1000e-0008-e1000e-unexpected-Reset-adapter-message-when-cable-p.patch
 	patches.drivers/e1000e-0009-e1000e-add-missing-bailout-on-error.patch
+	patches.drivers/e1000e-0010-e1000e-resolve-checkpatch-PREFER_PR_LEVEL-warning.patch
 
 	########################################################
 	# Wireless Networking
