e1000e: correct maximum frame size on 82579 (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15079,6 +15079,7 @@
 	patches.drivers/e1000e-0036-e1000e-cleanup-remove-e1000_get_phy_cfg_done.patch
 	patches.drivers/e1000e-0037-e1000e-cleanup-remove-e1000_get_cable_length.patch
 	patches.drivers/e1000e-0038-e1000e-cleanup-remove-e1000e_commit_phy.patch
+	patches.drivers/e1000e-0039-e1000e-correct-maximum-frame-size-on-82579.patch
 
 	########################################################
 	# Wireless Networking
