e1000e: cleanup code duplication (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15055,6 +15055,7 @@
 	patches.drivers/e1000e-0012-e1000e-cleanup-unusual-comment-placement.patch
 	patches.drivers/e1000e-0013-e1000e-cleanup-unnecessary-line-wrap.patch
 	patches.drivers/e1000e-0014-e1000e-cleanup-magic-number.patch
+	patches.drivers/e1000e-0015-e1000e-cleanup-code-duplication.patch
 
 	########################################################
 	# Wireless Networking
