e1000e: Out of line __ew32_prepare/__ew32 (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15192,6 +15192,7 @@
 	patches.drivers/e1000e-0149-e1000e-82574-82583-TimeSync-errata-for-SYSTIM-read.patch
 	patches.drivers/e1000e-0150-e1000e-Cleanup-parenthesis-around-return-value.patch
 	patches.drivers/e1000e-0151-e1000e-Fix-expand-setting-EEE-link-info-to-all-affec.patch
+	patches.drivers/e1000e-0152-e1000e-Out-of-line-__ew32_prepare-__ew32.patch
 
 	########################################################
 	# Wireless Networking
