e1000e: cosmetic move of #defines and prototypes to the new 82571.h (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15090,6 +15090,7 @@
 	patches.drivers/e1000e-0047-e1000e-update-driver-version-string.patch
 	patches.drivers/e1000e-0048-e1000e-resolve-Wunused-parameter-compile-warnings.patch
 	patches.drivers/e1000e-0049-e1000e-use-generic-IEEE-MII-definitions.patch
+	patches.drivers/e1000e-0050-e1000e-cosmetic-move-of-defines-and-prototypes-to-th.patch
 
 	########################################################
 	# Wireless Networking
