--- a/series.conf
+++ b/series.conf
@@ -15067,6 +15067,7 @@
 	patches.drivers/e1000e-0024-e1000e-remove-prototype-of-non-existent-function.patch
 	patches.drivers/e1000e-0025-e1000e-update-copyright-date.patch
 	patches.drivers/e1000e-0026-e1000e-correct-maximum-frame-size-on-i217-i218.patch
+	patches.drivers/e1000e-0027-e1000e-fix-PHY-init-workarounds-for-i217-i218.patch
 
 	########################################################
 	# Wireless Networking
