e1000e: update driver version string (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15087,6 +15087,7 @@
 	patches.drivers/e1000e-0044-e1000e-cleanup-defines.h.patch
 	patches.drivers/e1000e-0045-e1000e-cleanup-group-OR-ed-bit-settings-with-parens.patch
 	patches.drivers/e1000e-0046-e1000e-cleanup-some-whitespace-and-indentation-issue.patch
+	patches.drivers/e1000e-0047-e1000e-update-driver-version-string.patch
 
 	########################################################
 	# Wireless Networking
