e1000e: cleanup: remove e1000_get_cable_length() (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15077,6 +15077,7 @@
 	patches.drivers/e1000e-0034-e1000e-cleanup-remove-e1000_force_speed_duplex.patch
 	patches.drivers/e1000e-0035-e1000e-cleanup-rename-e1000_get_cfg_done.patch
 	patches.drivers/e1000e-0036-e1000e-cleanup-remove-e1000_get_phy_cfg_done.patch
+	patches.drivers/e1000e-0037-e1000e-cleanup-remove-e1000_get_cable_length.patch
 
 	########################################################
 	# Wireless Networking
