e1000e: Validate hwtstamp_config completely before applying it (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15150,6 +15150,7 @@
 	patches.drivers/e1000e-0107-e1000e-fix-overrun-of-PHY-RAR-array.patch
 	patches.drivers/e1000e-0108-DMA-API-net-intel-e1000e-fix-32-bit-DMA-mask-handlin.patch
 	patches.drivers/e1000e-0109-intel-Remove-extern-from-function-prototypes.patch
+	patches.drivers/e1000e-0110-e1000e-Validate-hwtstamp_config-completely-before-ap.patch
 
 	########################################################
 	# Wireless Networking
