--- a/series.conf
+++ b/series.conf
@@ -15147,6 +15147,7 @@
 	patches.drivers/e1000e-0104-e1000e-resolve-checkpatch-JIFFIES_COMPARISON-warning.patch
 	patches.drivers/e1000e-0105-e1000e-balance-semaphore-put-get-for-82573.patch
 	patches.drivers/e1000e-0106-e1000e-cleanup-boolean-comparison-to-true.patch
+	patches.drivers/e1000e-0107-e1000e-fix-overrun-of-PHY-RAR-array.patch
 
 	########################################################
 	# Wireless Networking
