--- a/series.conf
+++ b/series.conf
@@ -15099,6 +15099,7 @@
 	patches.drivers/e1000e-0056-e1000e-cosmetic-move-of-defines-and-prototypes-to-th.patch
 	patches.drivers/e1000e-0057-e1000e-convert-enums-of-register-offsets-and-move-de.patch
 	patches.drivers/e1000e-0058-e1000e-cleanup-checkpatch-braces-checks.patch
+	patches.drivers/e1000e-0059-e1000e-display-a-warning-message-when-SmartSpeed-wor.patch
 
 	########################################################
 	# Wireless Networking
