e1000e: cleanup defines.h (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15084,6 +15084,7 @@
 	patches.drivers/e1000e-0041-e1000e-cleanup-remove-unused-define.patch
 	patches.drivers/e1000e-0042-e1000e-cleanup-hw.h.patch
 	patches.drivers/e1000e-0043-e1000e-cleanup-remove-comments-which-are-no-longer-a.patch
+	patches.drivers/e1000e-0044-e1000e-cleanup-defines.h.patch
 
 	########################################################
 	# Wireless Networking
