--- a/series.conf
+++ b/series.conf
@@ -15180,6 +15180,7 @@
 	patches.drivers/e1000e-0137-e1000e-Correctly-include-VLAN_HLEN-when-changing-int.patch
 	patches.drivers/e1000e-0138-e1000e-Enclose-e1000e_pm_thaw-with-CONFIG_PM_SLEEP.patch
 	patches.drivers/e1000e-0139-e1000e-igb-ixgbe-i40e-fix-message-terminations.patch
+	patches.drivers/e1000e-0140-e1000e-Cleanup-return-values-in-ethtool.patch
 
 	########################################################
 	# Wireless Networking
