e1000e: Fix TSO with non-accelerated vlans (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15202,6 +15202,7 @@
 	patches.drivers/e1000e-0159-e1000e-Fix-Runtime-PM-blocks-EEE-link-negotiation-in.patch
 	patches.drivers/e1000e-0160-e1000e-fix-trivial-kernel-doc-typos.patch
 	patches.drivers/e1000e-0161-e1000e-delete-excessive-space-character-in-debug-mes.patch
+	patches.drivers/e1000e-0162-e1000e-Fix-TSO-with-non-accelerated-vlans.patch
 
 	########################################################
 	# Wireless Networking
