e1000e: Release mutex lock only if it has been initially acquired (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15130,6 +15130,7 @@
 	patches.drivers/e1000e-0087-e1000e-panic-caused-by-Rx-traffic-arriving-while-int.patch
 	patches.drivers/e1000e-0088-e1000e-fix-scheduling-while-atomic-bug.patch
 	patches.drivers/e1000e-0089-e1000e-cleanup-whitespace.patch
+	patches.drivers/e1000e-0090-e1000e-Release-mutex-lock-only-if-it-has-been-initia.patch
 
 	########################################################
 	# Wireless Networking
