e1000e: add support for hardware timestamping on some devices (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15058,6 +15058,7 @@
 	patches.drivers/e1000e-0015-e1000e-cleanup-code-duplication.patch
 	patches.drivers/e1000e-0016-e1000e-merge-multiple-conditional-statements-into-on.patch
 	patches.drivers/e1000e-0017-e1000e-Use-standard-defines-for-PCIe-Capability-ASPM.patch
+	patches.drivers/e1000e-0018-e1000e-add-support-for-hardware-timestamping-on-some.patch
 
 	########################################################
 	# Wireless Networking
