--- a/series.conf
+++ b/series.conf
@@ -15199,6 +15199,7 @@
 	patches.drivers/e1000e-0156-e1000e-Add-code-to-check-return-values-on-NVM-access.patch
 	patches.drivers/e1000e-0157-e1000e-Add-support-for-EEE-in-Sx-states.patch
 	patches.drivers/e1000e-0158-e1000e-Fix-EEE-in-S5-w-Runtime-PM-enabled.patch
+	patches.drivers/e1000e-0159-e1000e-Fix-Runtime-PM-blocks-EEE-link-negotiation-in.patch
 
 	########################################################
 	# Wireless Networking
