--- a/series.conf
+++ b/series.conf
@@ -15170,6 +15170,7 @@
 	patches.drivers/e1000e-0127-e1000e-Fix-ethtool-offline-tests-for-82579-parts.patch
 	patches.drivers/e1000e-0128-e1000e-Fix-SHRA-register-access-for-82579.patch
 	patches.drivers/e1000e-0129-net-e1000e-calls-skb_set_hash.patch
+	patches.drivers/e1000e-0130-e1000e-fix-the-build-error-when-PM-is-disabled.patch
 
 	########################################################
 	# Wireless Networking
