--- a/series.conf
+++ b/series.conf
@@ -15148,6 +15148,7 @@
 	patches.drivers/e1000e-0105-e1000e-balance-semaphore-put-get-for-82573.patch
 	patches.drivers/e1000e-0106-e1000e-cleanup-boolean-comparison-to-true.patch
 	patches.drivers/e1000e-0107-e1000e-fix-overrun-of-PHY-RAR-array.patch
+	patches.drivers/e1000e-0108-DMA-API-net-intel-e1000e-fix-32-bit-DMA-mask-handlin.patch
 
 	########################################################
 	# Wireless Networking
