--- a/series.conf
+++ b/series.conf
@@ -15139,6 +15139,7 @@
 	patches.drivers/e1000e-0096-e1000e-Tx-hang-on-I218-when-linked-at-100Half-and-sl.patch
 	patches.drivers/e1000e-0097-e1000e-ethtool-unnecessarily-takes-device-out-of-RPM.patch
 	patches.drivers/e1000e-0098-e1000e-enable-support-for-new-device-IDs.patch
+	patches.drivers/e1000e-0099-e1000e-do-not-resume-device-from-RPM-suspend-to-read.patch
 
 	########################################################
 	# Wireless Networking
