e1000e: remove definition of struct which is no longer used (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15068,6 +15068,7 @@
 	patches.drivers/e1000e-0025-e1000e-update-copyright-date.patch
 	patches.drivers/e1000e-0026-e1000e-correct-maximum-frame-size-on-i217-i218.patch
 	patches.drivers/e1000e-0027-e1000e-fix-PHY-init-workarounds-for-i217-i218.patch
+	patches.drivers/e1000e-0028-e1000e-remove-definition-of-struct-which-is-no-longe.patch
 
 	########################################################
 	# Wireless Networking
