--- a/series.conf
+++ b/series.conf
@@ -15115,6 +15115,7 @@
 	patches.drivers/e1000e-0072-e1000e-cleanup-unnecessary-line-breaks.patch
 	patches.drivers/e1000e-0073-e1000e-cleanup-USLEEP_RANGE-checkpatch-checks.patch
 	patches.drivers/e1000e-0074-e1000e-cleanup-format-of-struct-e1000_opt_list-struc.patch
+	patches.drivers/e1000e-0075-e1000e-cleanup-move-defines-to-appropriate-header-fi.patch
 
 	########################################################
 	# Wireless Networking
