--- a/series.conf
+++ b/series.conf
@@ -15176,6 +15176,7 @@
 	patches.drivers/e1000e-0133-e1000e-add-timeout-for-TX-HW-time-stamping-work.patch
 	patches.drivers/e1000e-0134-e1000e-remove-redundant-if-clause-from-PTP-work.patch
 	patches.drivers/e1000e-0135-e1000e-Fix-no-connectivity-when-driver-loaded-with-c.patch
+	patches.drivers/e1000e-0136-e1000e-remove-open-coded-skb_cow_head.patch
 
 	########################################################
 	# Wireless Networking
