e1000e: Cleanup use of deprecated DEFINE_PCI_DEVICE_TABLE (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15183,6 +15183,7 @@
 	patches.drivers/e1000e-0140-e1000e-Cleanup-return-values-in-ethtool.patch
 	patches.drivers/e1000e-0141-e1000e-Cleanup-to-fix-checkpatch-missing-blank-lines.patch
 	patches.drivers/e1000e-0142-e1000e-Cleanup-checkpatch-extra-space.patch
+	patches.drivers/e1000e-0143-e1000e-Cleanup-use-of-deprecated-DEFINE_PCI_DEVICE_T.patch
 
 	########################################################
 	# Wireless Networking
