e1000e: fix runtime power management transitions (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15101,6 +15101,7 @@
 	patches.drivers/e1000e-0058-e1000e-cleanup-checkpatch-braces-checks.patch
 	patches.drivers/e1000e-0059-e1000e-display-a-warning-message-when-SmartSpeed-wor.patch
 	patches.drivers/e1000e-0060-e1000e-workaround-DMA-unit-hang-on-I218.patch
+	patches.drivers/e1000e-0061-e1000e-fix-runtime-power-management-transitions.patch
 
 	########################################################
 	# Wireless Networking
