e1000e: disable ASPM L1 on 82583 (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15133,6 +15133,7 @@
 	patches.drivers/e1000e-0090-e1000e-Release-mutex-lock-only-if-it-has-been-initia.patch
 	patches.drivers/e1000e-0091-e1000e-Remove-duplicate-assignment-of-default-rx-tx-.patch
 	patches.drivers/e1000e-0092-e1000e-Use-marco-instead-of-digit-for-defining-e1000.patch
+	patches.drivers/e1000e-0093-e1000e-disable-ASPM-L1-on-82583.patch
 
 	########################################################
 	# Wireless Networking
