e1000e: Cleanup - Update GPL header and Copyright (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15161,6 +15161,7 @@
 	patches.drivers/e1000e-0118-e1000e-Cleanup-unecessary-references.patch
 	patches.drivers/e1000e-0119-e1000e-Resolve-issues-with-Management-Engine-ME-brie.patch
 	patches.drivers/e1000e-0120-e1000e-Fix-82579-sets-LPI-too-early.patch
+	patches.drivers/e1000e-0121-e1000e-Cleanup-Update-GPL-header-and-Copyright.patch
 
 	########################################################
 	# Wireless Networking
