e1000e: enable support for new device IDs (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15138,6 +15138,7 @@
 	patches.drivers/e1000e-0095-e1000e-low-throughput-using-4K-jumbos-on-I218.patch
 	patches.drivers/e1000e-0096-e1000e-Tx-hang-on-I218-when-linked-at-100Half-and-sl.patch
 	patches.drivers/e1000e-0097-e1000e-ethtool-unnecessarily-takes-device-out-of-RPM.patch
+	patches.drivers/e1000e-0098-e1000e-enable-support-for-new-device-IDs.patch
 
 	########################################################
 	# Wireless Networking
