e1000e: cleanup CODE_INDENT checkpatch errors (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15103,6 +15103,7 @@
 	patches.drivers/e1000e-0060-e1000e-workaround-DMA-unit-hang-on-I218.patch
 	patches.drivers/e1000e-0061-e1000e-fix-runtime-power-management-transitions.patch
 	patches.drivers/e1000e-0062-e1000e-fix-accessing-to-suspended-device.patch
+	patches.drivers/e1000e-0063-e1000e-cleanup-CODE_INDENT-checkpatch-errors.patch
 
 	########################################################
 	# Wireless Networking
