e1000e: fix ethtool offline register test for I217 (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15059,6 +15059,7 @@
 	patches.drivers/e1000e-0016-e1000e-merge-multiple-conditional-statements-into-on.patch
 	patches.drivers/e1000e-0017-e1000e-Use-standard-defines-for-PCIe-Capability-ASPM.patch
 	patches.drivers/e1000e-0018-e1000e-add-support-for-hardware-timestamping-on-some.patch
+	patches.drivers/e1000e-0019-e1000e-fix-ethtool-offline-register-test-for-I217.patch
 
 	########################################################
 	# Wireless Networking
