--- a/series.conf
+++ b/series.conf
@@ -15163,6 +15163,7 @@
 	patches.drivers/e1000e-0120-e1000e-Fix-82579-sets-LPI-too-early.patch
 	patches.drivers/e1000e-0121-e1000e-Cleanup-Update-GPL-header-and-Copyright.patch
 	patches.drivers/e1000e-0122-e1000e-Add-missing-branding-strings-in-ich8lan.c.patch
+	patches.drivers/e1000e-0123-e1000e-Refactor-PM-flows.patch
 
 	########################################################
 	# Wireless Networking
