e1000e: cleanup: group OR'ed bit settings with parens (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15085,6 +15085,7 @@
 	patches.drivers/e1000e-0042-e1000e-cleanup-hw.h.patch
 	patches.drivers/e1000e-0043-e1000e-cleanup-remove-comments-which-are-no-longer-a.patch
 	patches.drivers/e1000e-0044-e1000e-cleanup-defines.h.patch
+	patches.drivers/e1000e-0045-e1000e-cleanup-group-OR-ed-bit-settings-with-parens.patch
 
 	########################################################
 	# Wireless Networking
