--- a/series.conf
+++ b/series.conf
@@ -15106,6 +15106,7 @@
 	patches.drivers/e1000e-0063-e1000e-cleanup-CODE_INDENT-checkpatch-errors.patch
 	patches.drivers/e1000e-0064-e1000e-cleanup-SPACING-checkpatch-errors-and-warning.patch
 	patches.drivers/e1000e-0065-e1000e-cleanup-LONG_LINE-checkpatch-warnings.patch
+	patches.drivers/e1000e-0066-e1000e-cleanup-LEADING_SPACE-checkpatch-warnings.patch
 
 	########################################################
 	# Wireless Networking
