e1000e: Fix CRC errors with jumbo traffic (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15195,6 +15195,7 @@
 	patches.drivers/e1000e-0152-e1000e-Out-of-line-__ew32_prepare-__ew32.patch
 	patches.drivers/e1000e-0153-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
 	patches.drivers/e1000e-0154-e1000e-remove-unnecessary-break-after-return.patch
+	patches.drivers/e1000e-0155-e1000e-Fix-CRC-errors-with-jumbo-traffic.patch
 
 	########################################################
 	# Wireless Networking
