e1000e: cleanup: remove e1000_force_speed_duplex() (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15074,6 +15074,7 @@
 	patches.drivers/e1000e-0031-e1000e-do-not-ignore-variables-which-get-set-a-value.patch
 	patches.drivers/e1000e-0032-e1000e-cleanup-do-not-assign-a-variable-a-value-when.patch
 	patches.drivers/e1000e-0033-e1000e-cleanup-remove-e1000_set_d0_lplu_state.patch
+	patches.drivers/e1000e-0034-e1000e-cleanup-remove-e1000_force_speed_duplex.patch
 
 	########################################################
 	# Wireless Networking
