e1000e: fix flow-control thresholds for jumbo frames on 82579/I217/I218 (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15060,6 +15060,7 @@
 	patches.drivers/e1000e-0017-e1000e-Use-standard-defines-for-PCIe-Capability-ASPM.patch
 	patches.drivers/e1000e-0018-e1000e-add-support-for-hardware-timestamping-on-some.patch
 	patches.drivers/e1000e-0019-e1000e-fix-ethtool-offline-register-test-for-I217.patch
+	patches.drivers/e1000e-0020-e1000e-fix-flow-control-thresholds-for-jumbo-frames-.patch
 
 	########################################################
 	# Wireless Networking
