e1000e: Feature Enable PHY Ultra Low Power Mode (ULP) (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15165,6 +15165,7 @@
 	patches.drivers/e1000e-0122-e1000e-Add-missing-branding-strings-in-ich8lan.c.patch
 	patches.drivers/e1000e-0123-e1000e-Refactor-PM-flows.patch
 	patches.drivers/e1000e-0124-e1000e-Refactor-of-Runtime-Power-Management.patch
+	patches.drivers/e1000e-0125-e1000e-Feature-Enable-PHY-Ultra-Low-Power-Mode-ULP.patch
 
 	########################################################
 	# Wireless Networking
