--- a/series.conf
+++ b/series.conf
@@ -15169,6 +15169,7 @@
 	patches.drivers/e1000e-0126-e1000e-Fix-not-generating-an-error-on-invalid-load-p.patch
 	patches.drivers/e1000e-0127-e1000e-Fix-ethtool-offline-tests-for-82579-parts.patch
 	patches.drivers/e1000e-0128-e1000e-Fix-SHRA-register-access-for-82579.patch
+	patches.drivers/e1000e-0129-net-e1000e-calls-skb_set_hash.patch
 
 	########################################################
 	# Wireless Networking
