--- a/series.conf
+++ b/series.conf
@@ -15162,6 +15162,7 @@
 	patches.drivers/e1000e-0119-e1000e-Resolve-issues-with-Management-Engine-ME-brie.patch
 	patches.drivers/e1000e-0120-e1000e-Fix-82579-sets-LPI-too-early.patch
 	patches.drivers/e1000e-0121-e1000e-Cleanup-Update-GPL-header-and-Copyright.patch
+	patches.drivers/e1000e-0122-e1000e-Add-missing-branding-strings-in-ich8lan.c.patch
 
 	########################################################
 	# Wireless Networking
