e1000e: Resolve issues with Management Engine (ME) briefly blocking PHY resets (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15159,6 +15159,7 @@
 	patches.drivers/e1000e-0116-e1000e-Use-pci_enable_msix_range-instead-of-pci_enab.patch
 	patches.drivers/e1000e-0117-e1000e-PTP-lock-in-e1000e_phc_adjustfreq.patch
 	patches.drivers/e1000e-0118-e1000e-Cleanup-unecessary-references.patch
+	patches.drivers/e1000e-0119-e1000e-Resolve-issues-with-Management-Engine-ME-brie.patch
 
 	########################################################
 	# Wireless Networking
