--- a/series.conf
+++ b/series.conf
@@ -15093,6 +15093,7 @@
 	patches.drivers/e1000e-0050-e1000e-cosmetic-move-of-defines-and-prototypes-to-th.patch
 	patches.drivers/e1000e-0051-e1000e-cosmetic-move-of-defines-to-the-new-80003es2l.patch
 	patches.drivers/e1000e-0052-e1000e-cosmetic-move-of-defines-and-prototypes-to-th.patch
+	patches.drivers/e1000e-0053-e1000e-cosmetic-move-of-function-prototypes-to-the-n.patch
 
 	########################################################
 	# Wireless Networking
