net: add address assign type "SET" (fate#317398).

--- a/series.conf
+++ b/series.conf
@@ -15270,6 +15270,7 @@
 
 	# igbvf SP4 update (fate#317398, bsc#909493)
 	patches.drivers/0001-net-call-add_device_randomness-only-after-successful.patch
+	patches.drivers/0002-net-add-address-assign-type-SET.patch
 
 	########################################################
 	# Wireless Networking
