--- a/series.conf
+++ b/series.conf
@@ -15278,6 +15278,7 @@
 	patches.drivers/0007-igbvf-Make-next_to_watch-a-pointer-and-adjust-memory.patch
 	patches.drivers/0008-drivers-net-dma_alloc_coherent-use-__GFP_ZERO-instea.patch
 	patches.drivers/0009-DMA-API-net-intel-igbvf-fix-32-bit-DMA-mask-handling.patch
+	patches.drivers/0010-intel-Remove-extern-from-function-prototypes.patch
 
 	########################################################
 	# Wireless Networking
