igbvf: be sane about random MAC addresses (fate#317398, bsc#909493).

--- a/series.conf
+++ b/series.conf
@@ -15273,6 +15273,7 @@
 	patches.drivers/0002-net-add-address-assign-type-SET.patch
 	patches.drivers/0003-net-remove-unnecessary-NET_ADDR_RANDOM-bitclean.patch
 	patches.drivers/0004-remove-init-of-dev-perm_addr-in-drivers.patch
+	patches.drivers/0005-igbvf-be-sane-about-random-MAC-addresses.patch
 
 	########################################################
 	# Wireless Networking
