remove init of dev->perm_addr in drivers (fate#317398, bsc#909493).

--- a/series.conf
+++ b/series.conf
@@ -15272,6 +15272,7 @@
 	patches.drivers/0001-net-call-add_device_randomness-only-after-successful.patch
 	patches.drivers/0002-net-add-address-assign-type-SET.patch
 	patches.drivers/0003-net-remove-unnecessary-NET_ADDR_RANDOM-bitclean.patch
+	patches.drivers/0004-remove-init-of-dev-perm_addr-in-drivers.patch
 
 	########################################################
 	# Wireless Networking
