ethernet: Remove unnecessary alloc/OOM messages, alloc cleanups (fate#317398).

--- a/series.conf
+++ b/series.conf
@@ -15274,6 +15274,7 @@
 	patches.drivers/0003-net-remove-unnecessary-NET_ADDR_RANDOM-bitclean.patch
 	patches.drivers/0004-remove-init-of-dev-perm_addr-in-drivers.patch
 	patches.drivers/0005-igbvf-be-sane-about-random-MAC-addresses.patch
+	patches.drivers/0006-ethernet-Remove-unnecessary-alloc-OOM-messages-alloc.patch
 
 	########################################################
 	# Wireless Networking
