--- a/series.conf
+++ b/series.conf
@@ -15280,6 +15280,7 @@
 	patches.drivers/0009-DMA-API-net-intel-igbvf-fix-32-bit-DMA-mask-handling.patch
 	patches.drivers/0010-intel-Remove-extern-from-function-prototypes.patch
 	patches.drivers/0011-net-drivers-net-Miscellaneous-conversions-to-ETH_ALE.patch
+	patches.drivers/0012-igbvf-integer-wrapping-bug-setting-the-mtu.patch
 
 	########################################################
 	# Wireless Networking
