igbvf: remove open-coded skb_cow_head (fate#317398, bsc#909493).

--- a/series.conf
+++ b/series.conf
@@ -15285,6 +15285,7 @@
 	patches.drivers/0014-net-igbvf-slight-optimization-of-addr-compare.patch
 	patches.drivers/0015-igbvf-Use-pci_enable_msix_range-instead-of-pci_enabl.patch
 	patches.drivers/0016-igbvf-Convert-uses-of-__constant_-foo-to-foo.patch
+	patches.drivers/0017-igbvf-remove-open-coded-skb_cow_head.patch
 
 	########################################################
 	# Wireless Networking
