--- a/series.conf
+++ b/series.conf
@@ -15281,6 +15281,7 @@
 	patches.drivers/0010-intel-Remove-extern-from-function-prototypes.patch
 	patches.drivers/0011-net-drivers-net-Miscellaneous-conversions-to-ETH_ALE.patch
 	patches.drivers/0012-igbvf-integer-wrapping-bug-setting-the-mtu.patch
+	patches.drivers/0013-igbvf-add-missing-iounmap-on-error-in-igbvf_probe.patch
 
 	########################################################
 	# Wireless Networking
