DMA-API: net: intel/igbvf: fix 32-bit DMA mask handling (fate#317398, bsc#909493).

--- a/series.conf
+++ b/series.conf
@@ -15277,6 +15277,7 @@
 	patches.drivers/0006-ethernet-Remove-unnecessary-alloc-OOM-messages-alloc.patch
 	patches.drivers/0007-igbvf-Make-next_to_watch-a-pointer-and-adjust-memory.patch
 	patches.drivers/0008-drivers-net-dma_alloc_coherent-use-__GFP_ZERO-instea.patch
+	patches.drivers/0009-DMA-API-net-intel-igbvf-fix-32-bit-DMA-mask-handling.patch
 
 	########################################################
 	# Wireless Networking
