igbvf: Use pci_enable_msix_range() instead of pci_enable_msix() (fate#317398, bsc#909493).

--- a/series.conf
+++ b/series.conf
@@ -15283,6 +15283,7 @@
 	patches.drivers/0012-igbvf-integer-wrapping-bug-setting-the-mtu.patch
 	patches.drivers/0013-igbvf-add-missing-iounmap-on-error-in-igbvf_probe.patch
 	patches.drivers/0014-net-igbvf-slight-optimization-of-addr-compare.patch
+	patches.drivers/0015-igbvf-Use-pci_enable_msix_range-instead-of-pci_enabl.patch
 
 	########################################################
 	# Wireless Networking
