--- a/series.conf
+++ b/series.conf
@@ -15286,6 +15286,7 @@
 	patches.drivers/0015-igbvf-Use-pci_enable_msix_range-instead-of-pci_enabl.patch
 	patches.drivers/0016-igbvf-Convert-uses-of-__constant_-foo-to-foo.patch
 	patches.drivers/0017-igbvf-remove-open-coded-skb_cow_head.patch
+	patches.drivers/0018-net-get-rid-of-SET_ETHTOOL_OPS.patch
 
 	########################################################
 	# Wireless Networking
