net: igbvf: slight optimization of addr compare (fate#317398, bsc#909493).

--- a/series.conf
+++ b/series.conf
@@ -15282,6 +15282,7 @@
 	patches.drivers/0011-net-drivers-net-Miscellaneous-conversions-to-ETH_ALE.patch
 	patches.drivers/0012-igbvf-integer-wrapping-bug-setting-the-mtu.patch
 	patches.drivers/0013-igbvf-add-missing-iounmap-on-error-in-igbvf_probe.patch
+	patches.drivers/0014-net-igbvf-slight-optimization-of-addr-compare.patch
 
 	########################################################
 	# Wireless Networking
