i40e,igb,ixgbe: remove usless return statements (fate#317398, bsc#909493).

--- a/series.conf
+++ b/series.conf
@@ -15287,6 +15287,7 @@
 	patches.drivers/0016-igbvf-Convert-uses-of-__constant_-foo-to-foo.patch
 	patches.drivers/0017-igbvf-remove-open-coded-skb_cow_head.patch
 	patches.drivers/0018-net-get-rid-of-SET_ETHTOOL_OPS.patch
+	patches.drivers/0019-i40e-igb-ixgbe-remove-usless-return-statements.patch
 
 	########################################################
 	# Wireless Networking
