net: use SPEED_UNKNOWN and DUPLEX_UNKNOWN when appropriate (fate#317398, bsc#909493).

--- a/series.conf
+++ b/series.conf
@@ -15288,6 +15288,7 @@
 	patches.drivers/0017-igbvf-remove-open-coded-skb_cow_head.patch
 	patches.drivers/0018-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/0019-i40e-igb-ixgbe-remove-usless-return-statements.patch
+	patches.drivers/0020-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
 
 	########################################################
 	# Wireless Networking
