igbvf: Make next_to_watch a pointer and adjust memory barriers to avoid races (fate#317398, bsc#909493).

--- a/series.conf
+++ b/series.conf
@@ -15275,6 +15275,7 @@
 	patches.drivers/0004-remove-init-of-dev-perm_addr-in-drivers.patch
 	patches.drivers/0005-igbvf-be-sane-about-random-MAC-addresses.patch
 	patches.drivers/0006-ethernet-Remove-unnecessary-alloc-OOM-messages-alloc.patch
+	patches.drivers/0007-igbvf-Make-next_to_watch-a-pointer-and-adjust-memory.patch
 
 	########################################################
 	# Wireless Networking
