PCI: Remove DEFINE_PCI_DEVICE_TABLE macro use (fate#317398, bsc#909493).

--- a/series.conf
+++ b/series.conf
@@ -15289,6 +15289,7 @@
 	patches.drivers/0018-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/0019-i40e-igb-ixgbe-remove-usless-return-statements.patch
 	patches.drivers/0020-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
+	patches.drivers/0021-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 
 	########################################################
 	# Wireless Networking
