drivers:net: dma_alloc_coherent: use __GFP_ZERO instead of memset(, 0) (fate#317398, bsc#909493).

--- a/series.conf
+++ b/series.conf
@@ -15276,6 +15276,7 @@
 	patches.drivers/0005-igbvf-be-sane-about-random-MAC-addresses.patch
 	patches.drivers/0006-ethernet-Remove-unnecessary-alloc-OOM-messages-alloc.patch
 	patches.drivers/0007-igbvf-Make-next_to_watch-a-pointer-and-adjust-memory.patch
+	patches.drivers/0008-drivers-net-dma_alloc_coherent-use-__GFP_ZERO-instea.patch
 
 	########################################################
 	# Wireless Networking
