net:drivers/net: Miscellaneous conversions to ETH_ALEN (fate#317398, bsc#909493).

--- a/series.conf
+++ b/series.conf
@@ -15279,6 +15279,7 @@
 	patches.drivers/0008-drivers-net-dma_alloc_coherent-use-__GFP_ZERO-instea.patch
 	patches.drivers/0009-DMA-API-net-intel-igbvf-fix-32-bit-DMA-mask-handling.patch
 	patches.drivers/0010-intel-Remove-extern-from-function-prototypes.patch
+	patches.drivers/0011-net-drivers-net-Miscellaneous-conversions-to-ETH_ALE.patch
 
 	########################################################
 	# Wireless Networking
