--- a/series.conf
+++ b/series.conf
@@ -15284,6 +15284,7 @@
 	patches.drivers/0013-igbvf-add-missing-iounmap-on-error-in-igbvf_probe.patch
 	patches.drivers/0014-net-igbvf-slight-optimization-of-addr-compare.patch
 	patches.drivers/0015-igbvf-Use-pci_enable_msix_range-instead-of-pci_enabl.patch
+	patches.drivers/0016-igbvf-Convert-uses-of-__constant_-foo-to-foo.patch
 
 	########################################################
 	# Wireless Networking
