mm: vmscan: count only dirty pages as congested (VM Performance, bnc#910517).

--- a/series.conf
+++ b/series.conf
@@ -1530,6 +1530,7 @@
 	patches.fixes/mm-vmscan-take-page-buffers-dirty-and-locked-state-into-account-v3-KABI-fix.patch
 	patches.fixes/mm-vmscan-do-not-continue-if-aborted-for-compaction.patch
 	patches.fixes/don-t-trigger-congestion-wait-on-dirty-but-not-write.patch
+	patches.fixes/mm-vmscan-count-only-dirty-pages-as-congested.patch
 	
 	# memcg enhacements
 	patches.suse/mm-memcg-print-statistics-directly-to-seq_file.patch
