Don't trigger congestion wait on dirty-but-not-writeout pages (VM Performance, bnc#909093, bnc#910517).

--- a/series.conf
+++ b/series.conf
@@ -1529,7 +1529,8 @@
 	patches.fixes/mm-vmscan-take-page-buffers-dirty-and-locked-state-into-account-v3-KABI.patch
 	patches.fixes/mm-vmscan-take-page-buffers-dirty-and-locked-state-into-account-v3-KABI-fix.patch
 	patches.fixes/mm-vmscan-do-not-continue-if-aborted-for-compaction.patch
-
+	patches.fixes/don-t-trigger-congestion-wait-on-dirty-but-not-write.patch
+	
 	# memcg enhacements
 	patches.suse/mm-memcg-print-statistics-directly-to-seq_file.patch
 	patches.suse/mm-memcg-group-swapped-out-statistics-counter-logica.patch
