--- a/series.conf
+++ b/series.conf
@@ -15062,6 +15062,9 @@
 
 	patches.fixes/crypto-testmgr-allow-aesni-and-clmulni.patch
 
+	# bsc#904901 / FATE#317374
+	patches.fixes/random-01-statically-compute-poolbitshift,-poolbytes,-poolbits
+
 	patches.fixes/crypto-prefix-module-autoloading-with-crypto
 	patches.fixes/crypto-include-crypto-module-prefix-in-template
 	patches.fixes/crypto-add-missing-crypto-module-aliases
