random: allow fractional bits to be tracked (FATE#317374).

--- a/series.conf
+++ b/series.conf
@@ -15064,6 +15064,7 @@
 
 	# bsc#904901 / FATE#317374
 	patches.fixes/random-01-statically-compute-poolbitshift,-poolbytes,-poolbits
+	patches.fixes/random-02-allow-fractional-bits-to-be-tracked
 
 	patches.fixes/crypto-prefix-module-autoloading-with-crypto
 	patches.fixes/crypto-include-crypto-module-prefix-in-template
