--- a/series.conf
+++ b/series.conf
@@ -15065,6 +15065,7 @@
 	# bsc#904901 / FATE#317374
 	patches.fixes/random-01-statically-compute-poolbitshift,-poolbytes,-poolbits
 	patches.fixes/random-02-allow-fractional-bits-to-be-tracked
+	patches.fixes/random-03-account-for-entropy-loss-due-to-overwrites
 
 	patches.fixes/crypto-prefix-module-autoloading-with-crypto
 	patches.fixes/crypto-include-crypto-module-prefix-in-template
