fsnotify: Fix handling of renames in audit (bnc#915200).

--- a/series.conf
+++ b/series.conf
@@ -1669,6 +1669,8 @@
 	patches.kabi/kabi-fix-for-move-d_rcu.patch
 	patches.fixes/deal-with-deadlock-in-d_walk.patch
 
+	patches.fixes/fsnotify-Fix-handling-of-renames-in-audit.patch
+
 	########################################################
 	# IPC patches
 	########################################################
