Fix add_timer_randomness throttling (bsc#904883,bsc#904901,FATE#317374).

--- a/series.conf
+++ b/series.conf
@@ -17697,6 +17697,7 @@
 	patches.fixes/random-01-statically-compute-poolbitshift,-poolbytes,-poolbits
 	patches.fixes/random-02-allow-fractional-bits-to-be-tracked
 	patches.fixes/random-03-account-for-entropy-loss-due-to-overwrites
+	patches.fixes/random-04-Fix-add_timer_randomness-throttling
 
 	patches.fixes/crypto-prefix-module-autoloading-with-crypto
 	patches.fixes/crypto-include-crypto-module-prefix-in-template
