i40e: Cleanup Tx buffer info layout (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15308,6 +15308,7 @@
 	patches.drivers/i40e-0015-i40e-clean-up-coccicheck-reported-errors.patch
 	patches.drivers/i40e-0016-i40e-Link-code-updates.patch
 	patches.drivers/i40e-0017-i40e-Drop-unused-completed-stat.patch
+	patches.drivers/i40e-0018-i40e-Cleanup-Tx-buffer-info-layout.patch
 
 	########################################################
 	# Wireless Networking
