--- a/series.conf
+++ b/series.conf
@@ -15629,6 +15629,7 @@
 	patches.drivers/i40e-0336-i40e-remove-irqs-only-when-they-are-set-up.patch
 	patches.drivers/i40e-0337-i40e-i40evf-fix-rx-descriptor-status.patch
 	patches.drivers/i40e-0338-i40e-i40evf-Fix-code-to-accommodate-i40e_register.h-.patch
+	patches.drivers/i40e-0339-i40e-i40evf-Clean-up-a-few-things.patch
 
 	########################################################
 	# Wireless Networking
