i40e: Separate out DCB capability and enabled flags (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15651,6 +15651,7 @@
 	patches.drivers/i40e-0358-i40e-i40evf-set-headwb-Tx-context-flags-and-use-them.patch
 	patches.drivers/i40e-0359-i40e-i40evf-AdminQ-API-update-for-new-FW.patch
 	patches.drivers/i40e-0360-i40e-Change-the-notion-of-src-and-dst-for-FD_SB-in-e.patch
+	patches.drivers/i40e-0361-i40e-Separate-out-DCB-capability-and-enabled-flags.patch
 
 	########################################################
 	# Wireless Networking
