i40e: use common failure flow (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15301,6 +15301,7 @@
 	patches.drivers/i40e-0008-i40e-include-i40e-in-kernel-proper.patch
 	patches.fixes/list-introduce-list_first_entry_or_null.patch
 	patches.fixes/net-Add-support-for-hardware-offloaded-encapsulation.patch
+	patches.drivers/i40e-0011-i40e-use-common-failure-flow.patch
 
 	########################################################
 	# Wireless Networking
