--- a/series.conf
+++ b/series.conf
@@ -15531,6 +15531,7 @@
 	patches.drivers/i40e-0238-net-Replace-u64_stats_fetch_begin_bh-to-u64_stats_fe.patch
 	patches.drivers/i40e-0239-i40e-Don-t-receive-packets-when-the-napi-budget-0.patch
 	patches.drivers/i40e-0240-net-i40e-Avoid-double-setting-of-NETIF_F_SG-for-the-.patch
+	patches.fixes/net-core-Add-VF-link-state-control.patch
 
 	########################################################
 	# Wireless Networking
