--- a/series.conf
+++ b/series.conf
@@ -15639,6 +15639,7 @@
 	patches.drivers/i40e-0346-i40e-i40evf-remove-deprecated-device-IDs.patch
 	patches.drivers/i40e-0347-i40e-add-checks-for-AQ-error-status-bits.patch
 	patches.drivers/i40e-0348-i40e-allow-for-more-VSIs.patch
+	patches.drivers/i40e-0349-i40e-remove-unused-variable-and-memory-allocation.patch
 
 	########################################################
 	# Wireless Networking
