i40e/i40evf: Use correct number of VF vectors (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15526,6 +15526,7 @@
 	patches.drivers/i40e-0233-i40e-Add-code-to-handle-FD-table-full-condition.patch
 	patches.drivers/i40e-0234-i40e-Bug-fix-for-FDIR-replay-logic.patch
 	patches.drivers/i40e-0235-i40e-Let-MDD-events-be-handled-by-MDD-handler.patch
+	patches.drivers/i40e-0236-i40e-i40evf-Use-correct-number-of-VF-vectors.patch
 
 	########################################################
 	# Wireless Networking
