i40e: Move q_vectors from pointer to array to array of pointers (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15314,6 +15314,7 @@
 	patches.drivers/i40e-0021-i40e-Drop-dead-code-and-flags-from-Tx-hotpath.patch
 	patches.drivers/i40e-0022-i40e-Add-support-for-Tx-byte-queue-limits.patch
 	patches.drivers/i40e-0023-i40e-Split-bytes-and-packets-from-Rx-Tx-stats.patch
+	patches.drivers/i40e-0024-i40e-Move-q_vectors-from-pointer-to-array-to-array-o.patch
 
 	########################################################
 	# Wireless Networking
