i40e: fix PTP bug (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15740,6 +15740,7 @@
 	patches.drivers/i40e-0447-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 	patches.drivers/i40e-0448-i40e-Fix-for-recent-kernel-panic.patch
 	patches.drivers/i40e-0449-i40e-Fix-a-few-potential-VF-dereferences.patch
+	patches.drivers/i40e-0450-i40e-fix-PTP-bug.patch
 
 	########################################################
 	# Wireless Networking
