i40e/i40evf: Some flow director HW definition fixes (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15517,6 +15517,7 @@
 	patches.drivers/i40e-0224-i40e-i40evf-carefully-fill-tx-ring.patch
 	patches.drivers/i40e-0225-i40e-delete-netdev-after-deleting-napi-and-vectors.patch
 	patches.drivers/i40e-0226-i40e-Fix-a-bug-in-the-update-logic-for-FDIR-SB-filte.patch
+	patches.drivers/i40e-0227-i40e-i40evf-Some-flow-director-HW-definition-fixes.patch
 
 	########################################################
 	# Wireless Networking
