i40e: Fix a boundary condition and turning off of ntuple (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15703,6 +15703,7 @@
 	patches.drivers/i40e-0410-i40e-i40evf-Do-not-free-the-dummy-packet-buffer-sync.patch
 	patches.drivers/i40e-0411-i40e-i40evf-Force-a-shifted-1-to-be-unsigned.patch
 	patches.drivers/i40e-0412-i40e-tolerate-lost-interrupts.patch
+	patches.drivers/i40e-0413-i40e-Fix-a-boundary-condition-and-turning-off-of-ntu.patch
 
 	########################################################
 	# Wireless Networking
