--- a/series.conf
+++ b/series.conf
@@ -15679,6 +15679,7 @@
 	patches.drivers/i40e-0386-i40e-Add-ablitity-to-enable-disable-link-from-set_li.patch
 	patches.drivers/i40e-0387-i40e-use-WoL-flag-when-setting-LAA.patch
 	patches.drivers/i40e-0388-i40e-allow-user-to-set-LAA-again.patch
+	patches.drivers/i40e-0389-i40e-reapply-LAA-after-reset.patch
 
 	########################################################
 	# Wireless Networking
