i40e: use same number of queues as CPUs (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15370,6 +15370,7 @@
 	patches.drivers/i40e-0077-i40e-Tell-the-stack-about-our-actual-number-of-queue.patch
 	patches.drivers/i40e-0078-i40e-init-flow-control-settings-to-disabled.patch
 	patches.drivers/i40e-0079-i40e-trivial-fixes.patch
+	patches.drivers/i40e-0080-i40e-use-same-number-of-queues-as-CPUs.patch
 
 	########################################################
 	# Wireless Networking
