i40e: whitespace fixes (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15478,6 +15478,7 @@
 	patches.drivers/i40e-0185-i40e-remove-extra-register-write.patch
 	patches.drivers/i40e-0186-i40e-associate-VMDq-queue-with-VM-type.patch
 	patches.drivers/i40e-0187-i40e-make-message-meaningful.patch
+	patches.drivers/i40e-0188-i40e-whitespace-fixes.patch
 
 	########################################################
 	# Wireless Networking
