i40e: clear qtx_head before enabling Tx queue (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15470,6 +15470,7 @@
 	patches.drivers/i40e-0177-i40e-allow-VF-to-remove-any-MAC-filter.patch
 	patches.drivers/i40e-0178-i40e-check-for-possible-incorrect-ipv6-checksum.patch
 	patches.drivers/i40e-0179-i40e-adjust-ITR-max-and-min-values.patch
+	patches.drivers/i40e-0180-i40e-clear-qtx_head-before-enabling-Tx-queue.patch
 
 	########################################################
 	# Wireless Networking
