i40e: Let MDD events be handled by MDD handler (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15525,6 +15525,7 @@
 	patches.drivers/i40e-0232-i40e-Define-a-new-state-variable-to-keep-track-of-fe.patch
 	patches.drivers/i40e-0233-i40e-Add-code-to-handle-FD-table-full-condition.patch
 	patches.drivers/i40e-0234-i40e-Bug-fix-for-FDIR-replay-logic.patch
+	patches.drivers/i40e-0235-i40e-Let-MDD-events-be-handled-by-MDD-handler.patch
 
 	########################################################
 	# Wireless Networking
