i40e: debugfs fix to dump remote LLDPDU (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15663,6 +15663,7 @@
 	patches.drivers/i40e-0370-i40e-i40evf-Reset-Head-and-Tail-on-AQ-initialization.patch
 	patches.drivers/i40e-0371-i40e-Fix-dangling-ring-pointers-upon-driver-removal.patch
 	patches.drivers/i40e-0372-i40e-Helper-routine-for-Rx-Tx-queue-enable-disable-w.patch
+	patches.drivers/i40e-0373-i40e-debugfs-fix-to-dump-remote-LLDPDU.patch
 
 	########################################################
 	# Wireless Networking
