i40e: relax the firmware API version check (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15604,6 +15604,7 @@
 	patches.drivers/i40e-0311-i40e-Clear-recovery-pending-if-reset-failed.patch
 	patches.drivers/i40e-0312-i40e-add-clear_pxe-AdminQ-request.patch
 	patches.drivers/i40e-0313-i40-disable-FCoE-for-MFP-modes.patch
+	patches.drivers/i40e-0314-i40e-relax-the-firmware-API-version-check.patch
 
 	########################################################
 	# Wireless Networking
