--- a/series.conf
+++ b/series.conf
@@ -15601,6 +15601,7 @@
 	patches.drivers/i40e-0308-i40e-Use-the-new-i40e_get_fd_cnt_all-function-in-oth.patch
 	patches.drivers/i40e-0309-i40e-i40evf-remove-storm-control.patch
 	patches.drivers/i40e-0310-i40e-i40evf-Change-type-to-u32-to-avoid-sparse-error.patch
+	patches.drivers/i40e-0311-i40e-Clear-recovery-pending-if-reset-failed.patch
 
 	########################################################
 	# Wireless Networking
