i40e: more print_hex_dump use (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15381,6 +15381,7 @@
 	patches.drivers/i40e-0088-i40e-prevent-null-pointer-exception-in-dump-descript.patch
 	patches.drivers/i40e-0089-i40e-simplify-error-messages-for-dump-descriptor.patch
 	patches.drivers/i40e-0090-i40e-fix-up-scanf-decoders.patch
+	patches.drivers/i40e-0091-i40e-more-print_hex_dump-use.patch
 
 	########################################################
 	# Wireless Networking
