i40e/i40evf: Add base address registers to aq struct (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15692,6 +15692,7 @@
 	patches.drivers/i40e-0399-i40e-Fix-the-FD-sideband-logic-to-detect-a-FD-table-.patch
 	patches.drivers/i40e-0400-i40e-Add-debugfs-hooks-to-print-current-total-FD-fil.patch
 	patches.drivers/i40e-0401-i40e-fix-fdir-programming.patch
+	patches.drivers/i40e-0402-i40e-i40evf-Add-base-address-registers-to-aq-struct.patch
 
 	########################################################
 	# Wireless Networking
