i40e: tighten up ring enable/disable flow (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15503,6 +15503,7 @@
 	patches.drivers/i40e-0210-i40e-don-t-handle-VF-reset-on-unload.patch
 	patches.drivers/i40e-0211-i40e-Use-pci_enable_msix_range-instead-of-pci_enable.patch
 	patches.drivers/i40e-0212-i40e-remove-unnecessary-delay.patch
+	patches.drivers/i40e-0213-i40e-tighten-up-ring-enable-disable-flow.patch
 
 	########################################################
 	# Wireless Networking
