i40e: clear AQ head and tail registers (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15335,6 +15335,7 @@
 	patches.drivers/i40e-0042-i40e-fix-error-return-code-in-i40e_probe.patch
 	patches.drivers/i40e-0043-i40e-set-pf_id-based-on-device-and-function-numbers.patch
 	patches.drivers/i40e-0044-i40e-register-file-updates.patch
+	patches.drivers/i40e-0045-i40e-clear-AQ-head-and-tail-registers.patch
 
 	########################################################
 	# Wireless Networking
