i40e: implement virtual device interface (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15295,6 +15295,7 @@
 	patches.drivers/i40e-0002-i40e-transmit-receive-and-NAPI.patch
 	patches.drivers/i40e-0003-i40e-driver-ethtool-core.patch
 	patches.drivers/i40e-0004-i40e-driver-core-headers.patch
+	patches.drivers/i40e-0005-i40e-implement-virtual-device-interface.patch
 
 	########################################################
 	# Wireless Networking
